Update Buổi 11 - Vòng lặp while.ipynb

--- a/Buổi 11 - Vòng lặp while.ipynb
+++ b/Buổi 11 - Vòng lặp while.ipynb
@@ -413,17 +413,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "while True:\n",
-    "    a = int(input(\"Nhập vào một số nguyên dương: \"))\n",
-    "    if a <= 0:\n",
-    "        print(\"Nhập sai quy định dòi friend, nhập lại đeee!\")\n",
-    "    else:\n",
-    "        print(\"Nhập đúng quy định rồi đó!\")\n",
-    "        break\n",
-    "\n",
     "a = int(input())\n",
     "b = int(input())\n",
-    "\n"
+    "\n",
+    "k = 1\n",
+    "\n",
+    "print(\"Tat ca cac uoc chung cua\", a ,\"va\", b, \"la:\")\n",
+    "\n",
+    "while True:\n",
+    "\tif a % k == 0 and b % k == 0:\n",
+    "\t\tprint(k)\n",
+    "\tk += 1\n",
+    "\tif k > a and k > b:\n",
+    "\t\tbreak"
    ]
   },
   {
@@ -436,11 +438,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f8b08df3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập a: 18\n",
+      "Nhập b: 12\n",
+      "Ước chung lớn nhất của 18 và 12 là: 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input(\"Nhập a: \"))\n",
+    "b = int(input(\"Nhập b: \"))\n",
+    "\n",
+    "k = 1\n",
+    "\n",
+    "while True:\n",
+    "\tif a % k == 0 and b % k == 0:\n",
+    "\t\ti = k\n",
+    "\tk += 1\n",
+    "\tif k > a and k > b:\n",
+    "\t\tprint(\"Ước chung lớn nhất của\", a ,\"và\", b, \"là:\", i)\n",
+    "\t\tbreak"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b1944bc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập a: 18\n",
+      "Nhập b: 12\n",
+      "Ước chung lớn nhất của 2 số vừa nhập là: 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input(\"Nhập a: \"))\n",
+    "b = int(input(\"Nhập b: \"))\n",
+    "\n",
+    "while a != b:\n",
+    "    if a > b:\n",
+    "        a = a - b\n",
+    "    else:\n",
+    "        b = b - a\n",
+    "print(\"Ước chung lớn nhất của 2 số vừa nhập là:\", a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -456,7 +509,82 @@
    "id": "cc609f05",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n = int(input(\"Nhập n: \"))\n",
+    "\n",
+    "k = 0\n",
+    "\n",
+    "print(\"Tất cả các số chính phương bé hơn\", n, \"là:\")\n",
+    "\n",
+    "while True:\n",
+    "\tif k ** 0.5 == int(k ** 0.5):\n",
+    "\t\tprint(k)\n",
+    "\tk += 1\n",
+    "\n",
+    "\tif k == n:\n",
+    "\t\tbreak"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5b598dc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập n: 15\n",
+      "Tất cả các số chính phương bé hơn 15 là:\n",
+      "0\n",
+      "1\n",
+      "4\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"Nhập n: \"))\n",
+    "\n",
+    "i = 0\n",
+    "\n",
+    "print(\"Tất cả các số chính phương bé hơn\", n, \"là:\")\n",
+    "\n",
+    "while i < n:\n",
+    "    cani = i ** 0.5\n",
+    "    if cani == int(cani):\n",
+    "        print(i)\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2ba81c6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập n: 15\n",
+      "0\n",
+      "1\n",
+      "4\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"Nhập n: \"))\n",
+    "\n",
+    "i = 0\n",
+    "\n",
+    "while i ** 2 < n:\n",
+    "    print(i ** 2)\n",
+    "    i += 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -472,11 +600,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "a3a7967e",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28\n",
+      "28 Chính là một số hoàn hảo!\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input(\"Nhập a: \"))\n",
+    "\n",
+    "k = 1\n",
+    "\n",
+    "tong = 0\n",
+    "\n",
+    "while True:\n",
+    "\tif a % k == 0:\n",
+    "\t\ttong += k\n",
+    "\tk += 1\n",
+    "\n",
+    "\tif k == a:\n",
+    "\t\tbreak\n",
+    "\n",
+    "if tong == a:\n",
+    "\tprint(a, \"Chính là một số hoàn hảo!\")\n",
+    "else:\n",
+    "\tprint(a, \"không phải là một số hoàn hảo!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8749a264",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = int(input(\"Nhập a: \"))\n",
+    "\n",
+    "i = 1\n",
+    "s = 0\n",
+    "\n",
+    "while i < a:\n",
+    "    if a % i == 0:\n",
+    "        s += i\n",
+    "    i += 1\n",
+    "\n",
+    "if a == s:\n",
+    "    print(\"Đây là số hoàn hảo!\")\n",
+    "else:\n",
+    "    print(\"Đây không phải là số hoàn hảo!\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -488,19 +667,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "802f4680",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "987654321\n",
+      "Tổng các chữ số của 987654321 là: 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input()\n",
+    "\n",
+    "k = 0\n",
+    "\n",
+    "while True:\n",
+    "\tk += 1\n",
+    "\tif k == len(a):\n",
+    "\t\tbreak\n",
+    "\n",
+    "print(\"Tổng các chữ số của\", a, \"là:\", k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "3653c87a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập số nguyên dương a: 123456789\n",
+      "Tổng các chữ số của 15 là: 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input(\"Nhập số nguyên dương a: \"))\n",
+    "\n",
+    "print(\"Tổng các chữ số của\", n, \"là:\", len(str(a)))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3653c87a",
+   "id": "136a07da",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = int(input(\"Nhập số nguyên dương a: \"))\n",
+    "\n",
+    "dem = 0\n",
+    "a0 = a\n",
+    "\n",
+    "while a != 0:\n",
+    "    a = a // 10\n",
+    "    dem += 1\n",
+    "\n",
+    "a = a0\n",
+    "\n",
+    "print(a)\n",
+    "\n",
+    "print(\"Tổng các chữ số của\", n, \"là:\", dem)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -515,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee8e1b6c",
+   "id": "f0eb35b0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -534,7 +769,43 @@
    "id": "9f38244d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = input(\"Nhập một số nguyên dương a: \")\n",
+    "\n",
+    "k = 1\n",
+    "\n",
+    "tong = 0\n",
+    "\n",
+    "while True:\n",
+    "\ttong += k * a.count(str(k))\n",
+    "\tk += 1\n",
+    "\tif k == 10:\n",
+    "\t\tbreak\n",
+    "\n",
+    "print(\"Tổng của tất cả các chữ số của\", a, \"là:\", tong)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a15e3191",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = input(\"Nhập một số nguyên dương a: \")\n",
+    "\n",
+    "k = 0\n",
+    "\n",
+    "tong = 0\n",
+    "\n",
+    "while True:\n",
+    "\ttong += int(a[k])\n",
+    "\tk += 1\n",
+    "\tif k == len(a):\n",
+    "\t\tbreak\n",
+    "\n",
+    "print(\"Tổng của tất cả các chữ số của\", a, \"là:\", tong)"
+   ]
   }
  ],
  "metadata": {
