Update Buoi 12 - Thực tập vòng lặp while.ipynb

--- a/Buoi 12 - Thực tập vòng lặp while.ipynb
+++ b/Buoi 12 - Thực tập vòng lặp while.ipynb
@@ -14,11 +14,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8cb73965",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập a: 7\n",
+      "7 là số nguyên tố!\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input(\"Nhập a: \"))\n",
+    "\n",
+    "k = 2\n",
+    "\n",
+    "co = True\n",
+    "\n",
+    "while k < a:\n",
+    "    if a % k == 0:\n",
+    "        co = False\n",
+    "    k += 1 \n",
+    "if co == False:\n",
+    "    print(a, \"không phải là số nguyên tố!\")\n",
+    "else:\n",
+    "    print(a, \"là số nguyên tố!\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -52,11 +76,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e7f9da21",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập a: 123456789\n",
+      "123456789 có 4 chữ số chẵn và 5 chữ số lẻ!\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input(\"Nhập a: \")\n",
+    "\n",
+    "k = 0\n",
+    "chan = 0\n",
+    "le = 0\n",
+    "\n",
+    "while k < len(a):\n",
+    "    if int(a[k]) % 2 == 0:\n",
+    "        chan += 1\n",
+    "    else:\n",
+    "        le += 1\n",
+    "    k += 1\n",
+    "\n",
+    "print(a, \"có\", chan, \"chữ số chẵn và\", le, \"chữ số lẻ!\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -68,11 +116,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "d4e474c8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập a: 987654321\n",
+      "987654321 có 4 chữ số chẵn và 5 chữ số lẻ!\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input(\"Nhập a: \"))\n",
+    "\n",
+    "chan = 0\n",
+    "le = 0\n",
+    "a0 = a\n",
+    "\n",
+    "while a != 0:\n",
+    "    chusocuoicung = a % 10\n",
+    "    a = a // 10\n",
+    "    \n",
+    "    if chusocuoicung % 2 == 0 and chusocuoicung != 0:\n",
+    "        chan += 1\n",
+    "    else:\n",
+    "        le += 1\n",
+    "\n",
+    "a = a0\n",
+    "\n",
+    "print(a, \"có\", chan, \"chữ số chẵn và\", le, \"chữ số lẻ!\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -86,11 +162,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "f001bd9a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập a:123456789\n",
+      "17\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input(\"Nhập a:\"))\n",
+    "\n",
+    "S = 0\n",
+    "\n",
+    "while a != 0:\n",
+    "    \n",
+    "    chu_so_cuoi_cung = a % 10\n",
+    "    \n",
+    "    a = a // 10\n",
+    "\n",
+    "    if chu_so_cuoi_cung in (2, 3, 5, 7):\n",
+    "        S += chu_so_cuoi_cung\n",
+    "        \n",
+    "print(S)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -116,11 +216,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "b9ed54a5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập a: 1634\n",
+      "1634 là một số armstrong!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Mine\n",
+    "a = int(input(\"Nhập a: \"))\n",
+    "\n",
+    "S = 0\n",
+    "a0 = a\n",
+    "b = len(str(a))\n",
+    "\n",
+    "while a != 0:\n",
+    "    \n",
+    "    chu_so_cuoi_cung = a % 10\n",
+    "    \n",
+    "    S += chu_so_cuoi_cung ** b\n",
+    "    \n",
+    "    a = a // 10\n",
+    "    \n",
+    "a = a0\n",
+    "\n",
+    "if S == a:\n",
+    "    print(a, \"là một số armstrong!\")\n",
+    "else:\n",
+    "    print(a, \"không phải là một số armstrong!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "af89a100",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập số a:371\n",
+      "Nhập đúng quy định\n",
+      "371 là số armstrong\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Đặng Huỳnh Long\n",
+    "while True:\n",
+    "    a = int(input('Nhập số a:'))\n",
+    "    if a > 0:\n",
+    "        print('Nhập đúng quy định')\n",
+    "        break\n",
+    "    print('Nhập sai quy định')\n",
+    "\n",
+    "b = len(str(a))\n",
+    "c = a\n",
+    "S = 0\n",
+    "while c != 0:\n",
+    "    S += (c%10)**b\n",
+    "    c = c//10\n",
+    "if S == a:\n",
+    "    print(a,'là số armstrong')\n",
+    "else:\n",
+    "    print(a,'không phải là số armstrong')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -136,11 +304,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "3ad4d85b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập a: 14\n",
+      "Số trong dãy số fibonacci lớn nhất nhưng không vượt quá 14 là: 13\n"
+     ]
+    }
+   ],
+   "source": [
+    "# A Long\n",
+    "\n",
+    "A = int(input(\"Nhập A: \"))\n",
+    "\n",
+    "b = 1\n",
+    "c = 1\n",
+    "\n",
+    "while (b + c) <= a:\n",
+    "    c, b = b + c, c\n",
+    "print(\"Số trong dãy số fibonacci lớn nhất nhưng không vượt quá\", a, \"là:\", c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6f03986a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập A: 13\n",
+      "Số trong dãy số fibonacci lớn nhất nhưng không vượt quá 13 là: 13\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Thầy\n",
+    "\n",
+    "A = int(input(\"Nhập A: \"))\n",
+    "\n",
+    "a = 1\n",
+    "b = 1\n",
+    "c = a + b\n",
+    "\n",
+    "while c <= A:\n",
+    "    a = b\n",
+    "    b = c\n",
+    "    c = a + b\n",
+    "\n",
+    "print(\"Số trong dãy số fibonacci lớn nhất nhưng không vượt quá\", A, \"là:\", b)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -156,11 +376,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "246ec002",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập A: 3\n",
+      "12 là nhỏ nhất sao cho 3.0198773448773446 > 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = int(input(\"Nhập A: \"))\n",
+    "\n",
+    "S = 0\n",
+    "\n",
+    "n = 1\n",
+    "\n",
+    "while S <= A:\n",
+    "    \n",
+    "    S += 1 / n\n",
+    "    \n",
+    "    n += 1\n",
+    "    \n",
+    "print(n, \"là nhỏ nhất sao cho\", S, \">\", A)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -205,7 +448,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
