Update Buổi 10 - Thực hành cấu trúc điều kiện-checkpoint.ipynb

--- a/Buổi 10 - Thực hành cấu trúc điều kiện-checkpoint.ipynb
+++ b/Buổi 10 - Thực hành cấu trúc điều kiện-checkpoint.ipynb
@@ -92,16 +92,15 @@
     "\n",
     "if a > 1:\n",
     "\tfor i in range(2, a):\n",
-    "\t\tco = a % k != 0\n",
+    "\t\tif a % k == 0:\n",
+    "            co = False\n",
     "\tk += 1\n",
     "\tif co == True:\n",
     "\t\tprint(a,  \"la so nguyen to!\")\n",
     "\telse:\n",
     "\t\tprint(a, \"khong phai la so nguyen to!\")\n",
     "else:\n",
-    "\tprint(a, \"khong phai la so nguyen to!\")\n",
-    "    \n",
-    "~~~> SAI"
+    "\tprint(a, \"khong phai la so nguyen to!\")"
    ]
   },
   {
@@ -395,17 +394,15 @@
     }
    ],
    "source": [
-    "tong = 700000\n",
     "tong_tam = \"\"\n",
     "tong = str(tong)\n",
     "k = -1\n",
     "dem = 0\n",
-    "## TẠI SAO LẠI KHÔNG CỘNG TỪ TRÁI SANG PHẢI MÀ LẠI CỘNG TỪ PHẢI SANG\n",
-    "## NẾU CỘNG TỪ PHẢI SANG THÌ RA CHUỖI NGƯỢC RỒI\n",
-    "for i in range(len(tong)): ## chạy từng ký tự trong chuỗi tong (chạy ngược từ dưới lên)\n",
+    "\n",
+    "for i in range(len(tong)):\n",
     "    tong_tam += tong[k]\n",
     "    dem += 1\n",
-    "    if dem == 3: ## đếm được 3 ký tự thì đưa thêm dấu chấm vào\n",
+    "    if dem == 3:\n",
     "        tong_tam += \".\"\n",
     "        dem = 0\n",
     "    k -= 1\n",
@@ -486,43 +483,6 @@
     "### Bài 7\n",
     "\n",
     "Nhập ngày, tháng, năm. Hãy tính và in ra màn hình kể từ đầu năm đến ngày vừa nhập là bao nhiêu ngày."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4c57f0a5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "date = int(input(\"Nhập ngày: \"))\n",
-    "month = int(input(\"Nhập tháng: \"))\n",
-    "year = int(input(\"Nhập năm: \"))\n",
-    "\n",
-    "x = 3\n",
-    "\n",
-    "if year // 400 == 0 or (year // 4 == 0 and year // 100 != 0):\n",
-    "    m2 = 29    \n",
-    "else:\n",
-    "    m2 = 28\n",
-    "\n",
-    "for i in range 7:\n",
-    "    if x % 2 == 0:\n",
-    "        month = 30\n",
-    "    else: \n",
-    "        month = 31\n",
-    "    x += 1\n",
-    "    \n",
-    "for i in range (8, 12):\n",
-    "    if x % 2 == 0:\n",
-    "        month = 31\n",
-    "    else:\n",
-    "        month = 30\n",
-    "\n",
-    "if year // 400 == 0 or (year // 4 == 0 and year // 100 != 0):\n",
-    "    m2 = 29    \n",
-    "else:\n",
-    "    m2 = 28"
    ]
   },
   {
