Update Buoi 12 - Thực tập vòng lặp while.ipynb

--- a/Buoi 12 - Thực tập vòng lặp while.ipynb
+++ b/Buoi 12 - Thực tập vòng lặp while.ipynb
@@ -56,11 +56,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "db79cb9d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tui đoán số bạn nghĩ là: 50 >\n",
+      "Tui đoán số bạn nghĩ là: 75 <\n",
+      "Tui đoán số bạn nghĩ là: 62 <\n",
+      "Tui đoán số bạn nghĩ là: 56 >\n",
+      "Tui đoán số bạn nghĩ là: 59 >\n",
+      "Tui đoán số bạn nghĩ là: 60 >\n",
+      "Tui đoán số bạn nghĩ là: 61 =\n",
+      "Số mình đoán là: 61 trong 7 lần đoán\n"
+     ]
+    }
+   ],
+   "source": [
+    "ghd = 0\n",
+    "ght = 100\n",
+    "\n",
+    "sodoan = (ght+ghd)//2\n",
+    "\n",
+    "solandoan = 1\n",
+    "\n",
+    "tl = input(\"Tui đoán số bạn nghĩ là: \" + str(sodoan) + \" \")\n",
+    "\n",
+    "while tl != \"=\":\n",
+    "\tif tl == \">\":\n",
+    "\t\tghd = sodoan + 1\n",
+    "\telif tl == \"<\":\n",
+    "\t\tght = sodoan - 1\n",
+    "\tsodoan = (ght+ghd)//2\n",
+    "\ttl = input(\"Tui đoán số bạn nghĩ là: \" + str(sodoan) + \" \")\n",
+    "\n",
+    "\tsolandoan += 1\n",
+    "\n",
+    "print(\"Số mình đoán là:\",sodoan,\"trong\",solandoan,\"lần đoán\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -384,8 +420,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nhập A: 3\n",
-      "12 là nhỏ nhất sao cho 3.0198773448773446 > 3\n"
+      "Nhập A: 6\n",
+      "228 là nhỏ nhất sao cho 1/1 + 1/2 + 1/3 + 1/4 + ... + 1/228 = 6.004366708345567 > 6\n"
      ]
     }
    ],
@@ -396,13 +432,17 @@
     "\n",
     "n = 1\n",
     "\n",
+    "day_so = \"\"\n",
+    "\n",
     "while S <= A:\n",
     "    \n",
-    "    S += 1 / n\n",
+    "\tS += 1 / n\n",
     "    \n",
-    "    n += 1\n",
+    "\tn += 1\n",
     "    \n",
-    "print(n, \"là nhỏ nhất sao cho\", S, \">\", A)"
+    "day_so += \"1/1 + 1/2 + 1/3 + 1/4 + ... + 1/\" + str(n)\n",
+    "\n",
+    "print(n, \"là nhỏ nhất sao cho\", day_so, \"=\", str(S), \">\", A)"
    ]
   },
   {
@@ -425,11 +465,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9edf35ac",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập số nguyên dương a: 123456789\n",
+      "Nhập số nguyên dương b: 91\n",
+      "Nhập b có một chữ số. Yêu cầu nhập lại!\n",
+      "Nhập số nguyên dương b: 89\n",
+      "Nhập b có một chữ số. Yêu cầu nhập lại!\n",
+      "Nhập số nguyên dương b: -996\n",
+      "Nhập b có một chữ số. Yêu cầu nhập lại!\n",
+      "Nhập số nguyên dương b: 3\n",
+      "Vị trí đầu tiên của 3 trong 123456789 là: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input(\"Nhập số nguyên dương a: \")\n",
+    "\n",
+    "while True:\n",
+    "\n",
+    "\tb = input(\"Nhập số nguyên dương b: \")\n",
+    "\t\n",
+    "\tif len(b) != 1:\n",
+    "\n",
+    "\t\tprint(\"Nhập b có một chữ số. Yêu cầu nhập lại!\")\n",
+    "\n",
+    "\telse:\n",
+    "\n",
+    "\t\tc = a.find(b)\n",
+    "\t\n",
+    "\t\tprint(\"Vị trí đầu tiên của\", b, \"trong\", a, \"là:\", c + 1)\n",
+    "\t\tbreak"
+   ]
   }
  ],
  "metadata": {
