Update Buoi 12 - Thực tập vòng lặp while.ipynb

--- a/Buoi 12 - Thực tập vòng lặp while.ipynb
+++ b/Buoi 12 - Thực tập vòng lặp while.ipynb
@@ -412,8 +412,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "246ec002",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập A: 6\n",
+      "227 là nhỏ nhất sao cho 1/1 + 1/2 + 1/3 + 1/4 + ... + 1/227 = 6.004366708345567 > 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "###### ĐÚNG\n",
+    "\n",
+    "A = int(input(\"Nhập A: \"))\n",
+    "\n",
+    "S = 0\n",
+    "\n",
+    "n = 0\n",
+    "\n",
+    "day_so = \"\"\n",
+    "\n",
+    "while S <= A:\n",
+    "    \n",
+    "    n += 1\n",
+    "        \n",
+    "    S += 1 / n\n",
+    "    \n",
+    "day_so += \"1/1 + 1/2 + 1/3 + 1/4 + ... + 1/\" + str(n)\n",
+    "\n",
+    "print(n, \"là nhỏ nhất sao cho\", day_so, \"=\", str(S), \">\", A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "dd9f8abc",
    "metadata": {},
    "outputs": [
     {
@@ -426,6 +463,8 @@
     }
    ],
    "source": [
+    "###### SAI\n",
+    "\n",
     "A = int(input(\"Nhập A: \"))\n",
     "\n",
     "S = 0\n",
@@ -435,11 +474,8 @@
     "day_so = \"\"\n",
     "\n",
     "while S <= A:\n",
-    "    \n",
-    "\tS += 1 / n\n",
-    "    \n",
-    "\tn += 1\n",
-    "    \n",
+    "    S += 1 / n    \n",
+    "    n += 1\n",
     "day_so += \"1/1 + 1/2 + 1/3 + 1/4 + ... + 1/\" + str(n)\n",
     "\n",
     "print(n, \"là nhỏ nhất sao cho\", day_so, \"=\", str(S), \">\", A)"
@@ -465,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "9edf35ac",
    "metadata": {},
    "outputs": [
@@ -474,14 +510,8 @@
      "output_type": "stream",
      "text": [
       "Nhập số nguyên dương a: 123456789\n",
-      "Nhập số nguyên dương b: 91\n",
-      "Nhập b có một chữ số. Yêu cầu nhập lại!\n",
-      "Nhập số nguyên dương b: 89\n",
-      "Nhập b có một chữ số. Yêu cầu nhập lại!\n",
-      "Nhập số nguyên dương b: -996\n",
-      "Nhập b có một chữ số. Yêu cầu nhập lại!\n",
-      "Nhập số nguyên dương b: 3\n",
-      "Vị trí đầu tiên của 3 trong 123456789 là: 3\n"
+      "Nhập số nguyên dương b: 0\n",
+      "Vị trí đầu tiên của 0 trong 123456789 là: 0\n"
      ]
     }
    ],
